# local-voice-spanish-tutor

./: .gitignore  README.md  bot.py  curl_bot.py  pyproject.toml  raw_bot.py  run.sh  run_bot.py  sync_bot.py
core/: config.py  engine.py  memory.py
persona/: AGENTS.md
