[project]
name = "local-voice-spanish-tutor"
version = "0.1.0"
description = "Local voice-powered Spanish tutor via Telegram. Uses Ollama for LLM, Moonshine for STT, Kokoro for TTS."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastrtc[stt]>=0.0.19",
    "kokoro-onnx>=0.4.7",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "python-telegram-bot>=21.0",
    "pydantic>=2.0",
]
